# CG-Projeto

./: CMakeLists.txt  box.3d  cone.xml  exemplo.xml  plane.3d  plane.xml  sphere.xml
3dObjects/: box.3d  cone.3d  plane.3d  sphere.3d
Engine/: main.cpp
Generator/: box.cpp  box.h  cone.cpp  cone.h  generator.cpp  plane.cpp
Structs/: Ponto.cpp
TP1/: CMakeLists.txt  exemplo2.xml
TP1/3dObjects/: plane.3d
TP1/Engine/: main.cpp
TP1/Generator/: box.cpp  plane.h  sphere.cpp  sphere.h
TP2/: CMakeLists.txt  box.xml  exemplo.xml  exemplo2.xml  sistemaSolar.xml  torus.xml
TP2/3dObjects/: sphere.3d  test.3d
TP2/Engine/: main.cpp
TP2/Generator/: generator.cpp  torus.cpp  torus.h
TP2/Structs/: Forma.cpp  Forma.h  Grupo.cpp  Grupo.h  Ponto.h  Transformacao.cpp
TP3/: CMakeLists.txt  exemplo.xml  exemplo2.xml  teapot.patch
TP3/3dObjects/: anel.3d  box.3d  orbita.3d  planet.3d  ring.3d  teapot.3d
TP3/Engine/: main.cpp
TP3/Generator/: bezier.cpp  cone.cpp  generator.cpp
TP3/Structs/: Forma.cpp  Forma.h  Grupo.cpp  Grupo.h  Transformacao.cpp  Transformacao.h
TP4/: CMakeLists.txt  exemplo.xml  sistemaSolar2.xml  sistemaSolar3.xml
TP4/3dObjects/: anel.3d  cintura.3d  orbita.3d  planet.3d  ring.3d  sun.3d  teapot.3d  torus.3d
TP4/Engine/: main.cpp
TP4/Generator/: bezier.cpp  bezier.h  box.cpp  cone.cpp  generator.cpp  plane.cpp  sphere.cpp  torus.cpp
TP4/Structs/: Forma.cpp  Forma.h  Grupo.h  Luz.cpp  Luz.h  Material.cpp  Material.h  Ponto.cpp  Ponto.h  Transformacao.cpp
